--- a/main.css
+++ b/main.css
@@ -59,7 +59,7 @@ body {
   font-size: .8em;
   letter-spacing: 2px;
   margin-bottom: -1%;
-  margin-top: 1.1em;
+  margin-top: .9em;
   padding-left: .4em;
   text-transform: uppercase;
 }
@@ -68,7 +68,7 @@ body {
   color: #DF723E;
   font-size: .9em;
   letter-spacing: 2px;
-  margin-top: 3em;
+  margin-top: 1.5em;
   margin-bottom: .1em;
   text-transform: uppercase;
 }
